# CreditNumberRecognizer

./: CMakeLists.txt  CreditModel.txt  CreditNumberRecog.cpp  CreditNumberRecog.h  EdgeDirFeatures.cpp  EdgeDirFeatures.h  MainAPI.cpp  MainAPI.h  Mat2Vector.hpp  Mser1D.hpp  NumberDetect.cpp  NumberDetect.h  NumberRecog.cpp  NumberRecog.h  ReadMe.txt  ReadMeJ.txt  argsort.hpp  common.cpp  common.h  main.cpp  util.cpp  util.h
